--- a/res/layout/modify_user_layout.xml
+++ b/res/layout/modify_user_layout.xml
@@ -1,168 +1,129 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#F1F1F1"
-     >
-     
+    android:background="@color/background"
+    android:orientation="vertical" >
     
-    
-    <ImageView 
+    <ImageView
         android:id="@+id/head_img"
-        android:layout_width="150dip"
-        android:layout_height="150dip"
-        android:src="@drawable/signup2_upload_photo"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="10dip"
-        android:layout_centerHorizontal="true"
-        />
-   <TextView 
-       android:id="@+id/username"
-        android:layout_below="@+id/head_img"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    	android:layout_centerHorizontal="true"
-    	android:layout_marginTop="5dip"
-    	android:text="UserName"
-    	android:textStyle="bold"
-    	android:textColor="#666666"
-    />
-   <TextView 
-       android:id="@+id/email"
-        android:layout_below="@+id/username"
+        android:layout_marginTop="16dp"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/signup2_upload_photo" />
+
+    <com.photowall.widget.typeface.TypefaceTextView
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    	android:layout_centerHorizontal="true"
-    	android:layout_marginTop="5dip"
-    	android:text="123@163.com"
-    	android:textColor="#666666"
-    	android:drawableRight="@drawable/signup2_edit_icon"
-    	android:drawablePadding="5dip"
-    />
-   <ImageView 
-        android:id="@+id/modifyEmail"
+        android:layout_marginTop="10dp"
+        android:layout_gravity="center_horizontal"
+        android:text="userName"
+        android:textColor="#666666"
+        android:textSize="18sp"
+        android:textStyle="bold"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
+    
+    <com.photowall.widget.typeface.TypefaceTextView
+        android:id="@+id/email"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/email"
-        android:src="@drawable/signup2_edit_icon"
-        android:layout_alignBaseline="@+id/email"
-        android:layout_marginLeft="5dip"
-        android:visibility="gone"
-       />
-  <!-- a legend start in --> 
-  
-  <RelativeLayout 
-      android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-      android:layout_below="@+id/email"
-      android:layout_marginTop="2dip"
-      android:id="@+id/legend_layout"
-      >
-   <ImageView 
+        android:layout_marginTop="5dip"
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:drawablePadding="5dip"
+        android:drawableRight="@drawable/signup2_edit_icon"
+        android:text="123@163.com"
+        android:textColor="#5B5B5B"
+        geekui:customTypeface="fonts/arial.ttf" />
+
+    <com.photowall.widget.typeface.TypefaceTextView
         android:id="@+id/legendtitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/signup2_intro1"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="18dip"
-        android:layout_alignParentTop="true"
-       />
-   <TextView 
-       android:id="@+id/boston_us_txt"
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="36.5dp"
+        android:gravity="center"
+        android:drawablePadding="4dp"
+        android:drawableLeft="@drawable/signup2_intro1"
+        android:text="a ledgend started in"
+        android:textSize="18sp"
+        android:textColor="#dadada"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
+    
+    <com.photowall.widget.typeface.TypefaceTextView
+        android:id="@+id/boston_us_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-    	android:layout_centerHorizontal="true"
-    	android:layout_marginTop="2dip"
-    	android:layout_below="@+id/legendtitle"
-    	android:text="Boston US"
-    	android:textColor="#666666"
-    	android:drawableRight="@drawable/signup2_edit_icon"
-    	android:drawablePadding="5dip"
-    />
-   <ImageView 
-        android:id="@+id/boston_us_edt"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_toRightOf="@+id/boston_us_txt"
-        android:src="@drawable/signup2_edit_icon"
-        android:layout_alignBaseline="@+id/boston_us_txt"
-        android:layout_marginLeft="5dip"
-        android:visibility="gone"
-       />
-   
-   </RelativeLayout>
-   
-  
-  
-  <!-- text --> 
-  
-  <RelativeLayout 
-      android:id="@+id/txt_layout"
-      android:layout_width="fill_parent"
-       android:layout_height="wrap_content"
-      android:layout_below="@+id/legend_layout"
-      android:layout_marginTop="2dip"
-      >
-    <ImageView 
+        android:layout_gravity="center_horizontal"
+        android:gravity="center"
+        android:drawablePadding="5dip"
+        android:drawableRight="@drawable/signup2_edit_icon"
+        android:text="Boston US"
+        android:textColor="#5b5b5b"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
+
+    <com.photowall.widget.typeface.TypefaceTextView
         android:id="@+id/say_title"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:src="@drawable/signup2_intro2"
-        android:layout_alignParentLeft="true"
-        android:layout_marginLeft="18dip"
-        android:layout_alignParentTop="true"
-       />
-   <EditText 
-       android:id="@+id/saytext"
-       android:layout_width="fill_parent"
-       android:layout_height="100dip"
-       android:hint="Input Your Saying..."
-       android:gravity="left|top"
-       android:background="@drawable/roundcorner"
-       android:padding="15dip"
-       android:layout_below="@+id/say_title"
-       android:layout_marginLeft="18dip"
-       android:layout_marginRight="18dip"
-       />
-   
+        android:layout_marginTop="8dp"
+        android:layout_marginLeft="36.5dp"
+        android:gravity="center"
+        android:drawablePadding="4dp"
+        android:drawableLeft="@drawable/signup2_intro2"
+        android:text="said, Username"
+        android:textColor="#dadada"
+        android:textSize="18sp"
+        geekui:customTypeface="fonts/TrajanPro-Bold.ttf" />
+    
+    <RelativeLayout android:layout_width="fill_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:layout_marginTop="9dp">
+        
+        <ImageView android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:gravity="left|bottom"
+            android:scaleType="fitStart"
+            android:src="@drawable/signup2_background"/>
+        
+        <EditText
+        	android:id="@+id/saytext"
+	        android:layout_width="wrap_content"
+	        android:layout_height="wrap_content"
+	        android:layout_marginLeft="31.5dp"
+	        android:background="@drawable/input_large"
+	        android:gravity="left|top"
+	        android:hint="Input Your Saying..."
+	        android:padding="15dip" />
+        
+        <RelativeLayout
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:background="#11ffffff"
+            android:padding="3dip" >
+
+            <TextView
+                android:id="@+id/nextbtn"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentBottom="true"
+                android:layout_alignParentRight="true"
+                android:layout_margin="10dip"
+                android:background="@drawable/btn_next"
+                android:text="NEXT"
+                android:textColor="@color/next_color"
+                android:textSize="18sp"
+                android:gravity="center" />
+        </RelativeLayout>
+
     </RelativeLayout>
     
- 
-    <!-- bg image -->
-  
-  <RelativeLayout 
-       android:layout_width="fill_parent"
-       android:layout_height="fill_parent"
-       android:layout_alignParentBottom="true"
-       android:layout_below="@+id/txt_layout"
-       android:gravity="center"
-       >
-       <ImageView 
-           android:layout_width="wrap_content"
-           android:layout_height="wrap_content"
-           android:src="@drawable/signup2_background"
-           />
-   </RelativeLayout> 
-  
-  <!-- buttom -->
-  
-  
-  <RelativeLayout 
-       android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:background="#11ffffff"
-        android:padding="3dip"
-      >
-   <ImageView 
-       android:id="@+id/nextbtn"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentRight="true"
-       android:layout_alignParentBottom="true"
-       android:text=""
-       android:src="@drawable/btn_next"
-       android:layout_margin="10dip"
-       />
-   </RelativeLayout>
-</RelativeLayout>
+    
+	
+</LinearLayout>
