--- a/res/layout/quest_item_layout.xml
+++ b/res/layout/quest_item_layout.xml
@@ -1,63 +1,62 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="120dip" 
-    android:background="@drawable/broder"
-    android:layout_margin="15dip"
-    xmlns:app="http://schemas.android.com/apk/res/com.photowall.photowallcommunity"
-     xmlns:geekui="http://schemas.android.com/apk/res-auto"
-    >
+    android:layout_height="120dp"
+    android:background="@drawable/rect_with_boder" >
+
     <!-- quest cover -->
-<ImageView 
-    android:id="@+id/quest_cover"
-    android:layout_width="fill_parent"
-    android:layout_height="120dip"
-    android:background="@drawable/quest_test"
-    />
-<com.photowall.widget.typeface.TypefaceTextView 
-    android:id="@+id/quest_title"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_alignParentTop="true"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="10dip"
-    android:layout_marginTop="10dip"
-    android:textSize="20sp"
-    android:textStyle="bold"
-    android:text="Must In My Life"
-    android:textColor="#ffffff"
-    android:shadowColor="#000000"
-    android:shadowDx="2"
-    android:shadowDy="2"
-    android:shadowRadius="2"
-    geekui:customTypeface="fonts/arial.ttf"
-    />
-<TextView 
-    android:id="@+id/quest_arch_number"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
-    android:layout_below="@+id/quest_title"
-    android:layout_alignParentLeft="true"
-    android:layout_marginLeft="10dip"
-    android:layout_marginTop="10dip"
-    android:textStyle="italic"
-    android:text="100 archievements"
-    android:textColor="#ffffff"
-    android:shadowColor="#000000"
-    android:shadowDx="2"
-    android:shadowDy="2"
-    android:shadowRadius="2"
-    />
-<Button 
-       android:id="@+id/followbtn"
-       android:layout_width="wrap_content"
-       android:layout_height="wrap_content"
-       android:layout_alignParentRight="true"
-       android:layout_centerVertical="true"
-       android:text="+ FOLLOW"
-       android:textColor="#ffffff"
-       android:textStyle="bold"
-       android:background="@drawable/button_redbg"
-       android:layout_marginRight="10dip"
-       />
+    <ImageView
+        android:id="@+id/quest_cover"
+        android:layout_width="fill_parent"
+        android:layout_height="120dp"
+        android:padding="2dp"
+        android:src="@drawable/quest_test"
+        android:scaleType="fitXY" />
+
+    <com.photowall.widget.typeface.TypefaceTextView
+        android:id="@+id/quest_title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="10dip"
+        android:layout_marginTop="10dip"
+        android:shadowColor="#000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="2"
+        android:text="Must In My Life"
+        android:textColor="#ffffff"
+        android:textSize="20sp"
+        android:textStyle="bold"
+        geekui:customTypeface="fonts/arial.ttf" />
+
+    <TextView
+        android:id="@+id/quest_arch_number"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_below="@+id/quest_title"
+        android:layout_marginLeft="10dip"
+        android:shadowColor="#000000"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="2"
+        android:text="100 archievements"
+        android:textColor="#ffffff"
+        android:textStyle="italic" />
+
+    <Button
+        android:id="@+id/followbtn"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:layout_centerVertical="true"
+        android:layout_marginRight="10dip"
+        android:background="@drawable/button_redbg"
+        android:text="+ FOLLOW"
+        android:textColor="#ffffff"
+        android:textStyle="bold" />
+
 </RelativeLayout>
