修改8-questtofollow list

--- a/res/layout/archi_jinhua_layout.xml
+++ b/res/layout/archi_jinhua_layout.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical" >
 
     <include
-        layout="@layout/explorer_title" />
+        layout="@layout/common_title" />
 
     <GridView
         android:id="@+id/gridView"
