--- a/res/layout/quest_page_layout.xml
+++ b/res/layout/quest_page_layout.xml
@@ -5,6 +5,8 @@
     android:background="@color/background"
     android:orientation="vertical" >
 
+    <include layout="@layout/common_title"/>
+    
     <ImageView
         android:id="@+id/headimg"
         android:layout_width="fill_parent"
@@ -16,7 +18,6 @@
         android:scaleType="fitStart" />
 
     <RelativeLayout
-        android:id="@+id/guide_bottom"
         android:layout_width="fill_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
@@ -25,6 +26,7 @@
             android:id="@+id/questlist"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
+            android:layout_marginTop="12dp"
             android:layout_marginLeft="12dp"
             android:layout_marginRight="12dp"
             android:cacheColorHint="@null"
@@ -33,6 +35,7 @@
         </ListView>
 
         <LinearLayout
+            android:id="@+id/guide_bottom"
             android:layout_width="fill_parent"
             android:layout_height="54dp"
             android:layout_alignParentBottom="true"
