--- a/res/layout/quest_item_layout.xml
+++ b/res/layout/quest_item_layout.xml
@@ -3,7 +3,9 @@
     xmlns:geekui="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
-    android:background="@drawable/rect_with_boder" >
+    android:background="@drawable/rect_with_boder"
+    android:focusable="false"
+    android:descendantFocusability="blocksDescendants" >
 
     <!-- quest cover -->
     <ImageView
